# elevation_manager

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/auth/: login.rs
src-tauri/src/commands/: admin.rs  contracts.rs  mod.rs  notifications.rs  production_simple.rs  production_workflow.rs  products.rs  reviews.rs  settings.rs  taskorders.rs  team.rs  users.rs  userteams.rs
src-tauri/src/services/: api_client.rs  config.rs  mod.rs
src/components/: CoordinateSystemInput.tsx  DegreeGridLayer.tsx  FloatingReviewPanel.tsx  GeometryInputSimple.tsx  GridUploader.tsx  InteractiveMap.tsx  Notification.tsx  NotificationBadge.tsx  NotificationDrawer.tsx  PrecomputedS2GridLayer.tsx  ProductSelector.tsx  ResizableImageComponent.tsx  ResizeableImageExtension.ts  ReviewApprovalDialog.tsx  ReviewEditor.tsx  ReviewViewer.tsx  S2CellSelector.tsx  S2GridLayer.tsx  Sidebar.tsx  StreamlinedProductCreator.tsx  TeamReviewPanel.tsx  TipTap.css
src/context/: AuthContext.tsx  NotificationContext.tsx  RefreshContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/contexts/: AppContext.tsx  AuthContext.tsx  FloatingReviewContext.tsx  ThemeContext.tsx
src/hooks/: useAutoRefresh.ts  useSessionManager.ts
src/layouts/: AppLayout.tsx  AuthLayout.tsx
src/pages/: ContractCreatePage.tsx  ContractDetailsPage.tsx  ContractsPage.tsx  Login.css  (+18 more)
(+39 files in other folders)
