[package]
name = "elevation_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elevation_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
log = "0.4.27"
env_logger = "0.11.7"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
base64 = "0.22.1"
dirs = "6.0.0"
chrono = { version = "0.4.40", features = ["serde"] }

